feat(init): encrypt shared preference

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,4 +140,7 @@ dependencies {
     // firebase crashanalytics
     implementation (Libs.crashAnalytics)
 
+    //security
+    implementation(Libs.security)
+
 }
